# AI-Context-Engineering

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SECURITY_STATUS.md  audit_report.md  backup_manager.py  context_detect.py  deploy.sh  docker-compose.yml  hallucination_mapping.yaml  hallucination_replacer.py  hallucination_scanner.py  hallucination_scanner_v2.py  install.sh  odin.config.example.yaml  odin.spec  pyproject.toml  requirements.txt  setup.py
.claude/: build-mastery-prompt  settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: README.md  test_invalid.json  validate.sh
.github/workflows/: bandit.yml  ci.yml  codeql.yml  rebuild-v6_1.yml  validate.yml
.odin/: AI_CHECKPOINT.json  README.md  audit.py  audit_report.md  config.json  hallucination_report.json  replacement_report.json
.odin/docs_cache/: cargo_index.json  npm_index.json  pypi_index.json
.odin/plugins/: plugin_api.py
.odin/plugins/contextguard/: contextguard.py
.odin/plugins/depguard/: config.json  depguard.py
.odin/schemas/: backup.schema.json  checkpoint.schema.json  config.schema.json  learning_log.schema.json
.odin/templates/: README.md
.odin/templates/fivem_lua/: config.lua  fxmanifest.lua  server.lua  template.json
.odin/templates/python_cli/: main.py  requirements.txt  setup.py  template.json
.odin/templates/saas_ts_supabase/: package.json  template.json
.odin/testgen/: __init__.py  core.py  heuristics.py  parser.py  renderers.py
agents/: Dockerfile.base  __init__.py  cli.py
agents/approbation/: Dockerfile
agents/cognitive/: __init__.py  architect.py  dev.py  intake.py  retrieval.py  review.py
agents/dev/: Dockerfile
agents/execution/: __init__.py  security.py  test.py
agents/intake/: Dockerfile
agents/mcp/: Dockerfile
agents/oracle/: __init__.py  code.py
agents/oracle_code/: Dockerfile
agents/retrieval/: Dockerfile
agents/shared/: __init__.py  base_agent.py  integrity.py  llm_client.py  message_bus.py  state_store.py
agents/shared/providers/: __init__.py  anthropic.py  base.py  custom.py  deepseek.py  google.py  groq.py  huggingface.py  ollama.py  openai.py  together.py
agents/system/: __init__.py  audit.py  checkpoint.py
api/: package.json
api/src/: config.ts  index.ts
api/src/middleware/: error.ts
api/src/routes/: agents.ts  health.ts  tasks.ts
api/src/services/: websocket.ts
api/src/types/: index.ts
database/: init.sql
docs/: 00_PROJECT_EVOLUTION.md  ANALOGIE.md  ANALYSIS.md  ARCHITECTURE.md  LLM_PROVIDERS.md  PROJECT_PHILOSOPHY.md  USER_CONFIGURATION.md  VISION.md
examples/: README.md  basic_usage.py  multi_provider.py  security_review.py
examples/fivem_server/: server.cfg
examples/flask_app/: .env  app.py  requirements.txt
examples/react_app/: package.json
examples/react_app/public/: index.html
examples/react_app/src/: App.css  App.js
exemple/: AI_CHECKPOINT.bak.json  AI_CHECKPOINT.json  README.md  learning_log.json
odin/: __init__.py  __main__.py  adjudicator.py  audit.py  audit_engine.py  backup.py  backup_decorator.py  checkpoint.py  cli.py  context_guard.py  core.py  grounded_only.py  instance.py  integrity.py  learning.py  mcp_fetch.py  rollback.py  router.py  schema_guard.py  tms.py  utils.py
odin-framework/: FILE_TREE.md  GRAND_VISION.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  README.md  SETUP.md  V7_STATUS.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
odin-framework/apps/web/: .env.example  .gitignore  package.json
odin-framework/docs/: index.md
orchestrator/: go.mod  go.sum
orchestrator/cmd/odin/: main.go
orchestrator/internal/router/: router.go
orchestrator/pkg/config/: config.go
plugins/contextguard/: contextguard.py
plugins/depguard/: depguard.py
prompts/: AI_Advanced_Algorithm.py  AI_Advandced_Errors_Gest.py  AI_CHECKPOINT.json  AI_More_Feedbacks.py  AUTONOMOUS_AI_PROMPT_ENGINEERING.md  ODIN.md  PROMPT_ENGINEERING.md  README.md
prompts/archive/: MISTRAL_AUTO_AI.md  ODIN_v4.0.0.md
releases/: odin-core-6.0.0.vsix
scripts/: build_unix.sh  build_windows.bat  health_check.sh  pull_models.sh  run_audit.sh  setup_db.sh
testgen/: __init__.py  generator.py
tests/: conftest.py  test_checkpoint.py  test_integrity.py  test_router.py
tests/integration/: __init__.py  test_agent_workflow.py
tests/unit/: __init__.py  test_base_agent.py  test_integrity.py  test_message_bus.py  test_providers.py  test_state_store.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx
(+35 files in other folders)
