[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"
[project]
name="odin-ai"
version="6.1.0"
description="ODIN v6.1 – Autonomous AI Codebase Assistant (offline-first)"
readme="README.md"
license={text="MIT"}
requires-python=">=3.9"
[project.scripts]
odin="odin.cli:main"
